# poreallas

./: .gitignore  README.md  example.env  justfile  project.py  project_hotdeaths_only.py  pyproject.toml
.github/workflows/: python-test.yaml
scripts/: 00-download_s51_hcm.py  00-download_s51_tasmin_tasmax_1.py  01-clean_estimate_s51_tas.py  01-clean_gamma.py  01-clean_ir_polygons.py  01-clean_segment_weights.py  01-download_and_parse_era5.py  01-parse_socioeconomics.py  02-clean_estimate_s51_tas.py  02-make_climtas.py  05-project_effects.py
src/poreallas/: __init__.py  extract.py  project.py
tests/: test_extract.py  test_project.py  test_yellow_purple_comparison.py
