[project]
name = "poreallas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "xarray[complete]>=2026.4.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]
