[project]
name = "poreallas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "fsspec[gcs]>=2026.4.0",
    "geopandas[all]>=1.1.3",
    "isku>=0.3.0",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "metacsv>=0.1.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "xarray[complete]>=2026.4.0",
    "xclim>=0.61.1",
    "xhistogram>=0.3.2",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[tool.marimo.runtime]
dotenv = [".env"]

[tool.ty.src]
include = ["src", "tests", "scripts"]
exclude = [
    "src/generated",
    # This scripts runs in a separate containerized environment.
    "scripts/01-download_and_parse_era5.py",
]
